experimental project.  However, as it moves towards having a more
"stable" release, I feel that it is better served by being small as
opposed to providing every possible feature. Thus, a wide range of
features are being removed or refactored a bit.  If a feature you are
using gets removed and you'd like to request its return, please submit
a bug report!  - Dave

09/10/2019 Removed the abide() function.  This feature was from the
           earliest days of Curio when there was initial thinking 
           about the interaction of async tasks and existing threads.
           The same functionality can still be implemented using run_in_thread()
           or block_in_thread() instead.  In the big picture, the problem
           being solved might not be that common.  So, in the interest
           of making Curio smaller, abide() has ridden off into the sunset.

09/08/2019 Removed BoundedSemaphore.

09/03/2019 Removed the experimental aside() functionality.  Too much 
           magic.  Better left to others.

09/03/2019 Removed the gather() function.  Use TaskGroup instead.

09/03/2019 Removed get_all_tasks() function.

09/03/2019 Removed the Task.pdb() method.

09/03/2019 Removed the Task.interrupt() method.

09/03/2019 The pointless (and completely unused) name argument to TaskGroup() 
           has been removed. 

08/09/2019 Exceptions raised inside the Curio kernel itself are no longer 
           reported to tasks.  Instead, they cause Curio to die. The
           kernel is never supposed to raise exceptions on its own--any
           exception that might be raised is an internal programming error.
           This change should not impact user-level code, but might affect
           uncontrolled Ctrl-C handling. If a KeyboardInterrupt occurs
           in the middle of kernel-level code, it will cause an uncontrolled
           death. If this actually matters to you, then modify your code to
           properly handle Ctrl-C via signal handling.
